tests/paczka1/fuzzy1/70750114.err
Error in line 15: S494 S494 5,0
Error in line 14: RDUN2m1cgL S186 53,8
Error in line 22: RDUN2m1cgL S818 67,0
Error in line 24: S494 S186 2,4
Error in line 34: S494 S494 73,3
